--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -100,10 +100,9 @@ body, * {
 }
 
 
-.logreg {
-    font-family: 'Quicksand', Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 1.3rem;
-    color: gold !important;
+.logregnav {
+    background: #00000060;
+    margin-bottom: 30px;
 }
 
 
