--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10668,32 +10668,14 @@ body,
 }
 
 .filters {
-  max-width: 170px;
+  max-width: 15%;
   background: #00000090;
   z-index: 100;
 }
 
-@media (min-width: 576px) {
-  .filters {
-    width: calc(540px/4);
-  }
-}
-
 @media (min-width: 768px) {
   .filters {
-    width: calc(720px/6);
-  }
-}
-
-@media (min-width: 992px) {
-  .filters {
-    width: calc(960px/6);
-  }
-}
-
-@media (min-width: 1200px) {
-  .filters {
-    width: calc(1140px/6);
+    max-width: calc(25% - 30px);
   }
 }
 
@@ -10919,6 +10901,15 @@ body,
   color: snow;
 }
 
+.requestlist .card-img {
+  width: auto;
+  height: 185px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
 .dropzone {
   height: 250px;
   border: 2px dashed #9e2929;
@@ -10933,5 +10924,51 @@ body,
 .dropzone.dragover {
   border-color: #9e292960;
   background: #a09a9a60;
+}
+
+#remember:checked ~ .remember::before {
+  content: "\1F5F8\FE0F";
+}
+
+.remember::before {
+  content: "\A0\A0";
+  line-height: 16px;
+  width: 16px;
+  background: transparent;
+  border: 1px solid #2d2828;
+  border-radius: 3px;
+  font-size: 1.2rem;
+  display: inline-flex;
+  color: #6600ff;
+  justify-content: center;
+  align-items: center;
+}
+
+.filesforupload {
+  flex: 0 1 auto;
+  border: 1px solid grey;
+  border-radius: 4px;
+  padding-left: 10px;
+  display: flex;
+  align-items: center;
+  margin-right: 4px;
+  background: #7b0c0c;
+  color: snow;
+}
+
+.filesforupload i {
+  color: #e40b0b;
+  margin-left: 4px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.filesforupload:hover {
+  background: #00000060;
+}
+
+#uploadlist {
+  background: transparent;
+  border: none;
 }
 
