--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10928,6 +10928,10 @@ body,
   color: snow;
 }
 
+#newtype {
+  box-sizing: content-box;
+}
+
 .requestlist .card-img {
   width: auto;
   height: 185px;
